--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "themissionary",
-  "version": "1.0.0",
-  "description": "Wordpress Theme",
-  "main": "style.css",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "concurrently": "^3.5.0",
-    "inuitcss": "^6.0.0-beta.5"
-  }
+    "name": "themissionary",
+    "version": "1.0.0",
+    "description": "Wordpress Theme",
+    "main": "style.css",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "dev":
+            "concurrently --kill-others -n \"sass,post,wbpck,copy\" -c \"green.inverse,cyan.inverse,blue.inverse\" \"sass --watch source/_sass:source/css\" \"postcss source/css/*.css -u autoprefixer --replace --map --watch\" \"webpack --watch\" \"watch \\\"copyfiles -u 1 -e './source/_*/*.*' './source/**/*.*' dist\\\" source\"; exit 0"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "concurrently": "^3.5.0",
+        "inuitcss": "^6.0.0-beta.5"
+    },
+    "repository": "git@github.com:lhermann/themissionary.git"
 }
