--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
     "main": "style.css",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "dev":
-            "concurrently --kill-others -n \"sass,post,wbpck,copy\" -c \"green.inverse,cyan.inverse,blue.inverse\" \"sass --watch source/_sass:source/css\" \"postcss source/css/*.css -u autoprefixer --replace --map --watch\" \"webpack --watch\" \"watch \\\"copyfiles -u 1 -e './source/_*/*.*' './source/**/*.*' dist\\\" source\"; exit 0"
+        "dev": "concurrently --kill-others -n \"sass,post,wbpck\" -c \"green.inverse,cyan.inverse,blue.inverse\" \"sass --sourcemap=none --watch _sass:dist/css\" \"postcss dist/css/*.css -u autoprefixer --replace --no-map --watch --poll\" \"webpack --watch\"; exit 0"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "cash-dom": "^1.3.5",
         "concurrently": "^3.5.0",
         "inuitcss": "^6.0.0-beta.5"
     },
