--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
     "main": "style.css",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "concurrently --kill-others -n \"sass,post,wbpck\" -c \"green.inverse,cyan.inverse,blue.inverse\" \"sass --sourcemap=none --watch _sass:dist/css\" \"postcss dist/css/*.css -u autoprefixer --replace --no-map --watch --poll\" \"webpack --watch\"; exit 0"
+        "dev":
+            "concurrently --kill-others -n \"sass,post,wbpck\" -c \"green.inverse,cyan.inverse,blue.inverse\" \"sass --sourcemap=none --watch _sass:dist/css\" \"postcss dist/css/*.css -u autoprefixer --replace --no-map --watch --poll\" \"webpack --watch\"; exit 0",
+        "build":
+            "sass --sourcemap=none --update _sass:dist/css && postcss dist/css/*.css -u autoprefixer --replace --no-map && webpack"
     },
     "author": "",
     "license": "ISC",
