--- a/package.json
+++ b/package.json
@@ -4,18 +4,31 @@
     "description": "Wordpress Theme",
     "main": "style.css",
     "scripts": {
+        "start": "npm run dev",
         "test": "echo \"Error: no test specified\" && exit 1",
-        "dev":
-            "concurrently --kill-others -n \"sass,post,wbpck\" -c \"green.inverse,cyan.inverse,blue.inverse\" \"sass --sourcemap=none --watch _sass:dist/css\" \"postcss dist/css/*.css -u autoprefixer --replace --no-map --watch --poll\" \"webpack --watch\"; exit 0",
-        "build":
-            "sass --sourcemap=none --update _sass:dist/css && postcss dist/css/*.css -u autoprefixer --replace --no-map && webpack"
+        "dev": "webpack --watch",
+        "build": "NODE_ENV=\"production\" webpack"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "cash-dom": "^1.3.5",
-        "concurrently": "^3.5.0",
-        "inuitcss": "^6.0.0-beta.5"
+        "cash-dom": "^1.3.7",
+        "concurrently": "^3.6.1",
+        "inuitcss": "^6.0.0",
+        "webpack": "^4.20.2"
     },
-    "repository": "git@github.com:lhermann/themissionary.git"
+    "repository": "git@github.com:lhermann/themissionary.git",
+    "devDependencies": {
+        "css-loader": "^1.0.0",
+        "cssnano": "^4.1.4",
+        "mini-css-extract-plugin": "^0.4.4",
+        "node-sass": "^4.9.3",
+        "optimize-css-assets-webpack-plugin": "^5.0.1",
+        "postcss-loader": "^3.0.0",
+        "postcss-preset-env": "^6.1.1",
+        "sass-loader": "^7.1.0",
+        "style-loader": "^0.23.1",
+        "uglifyjs-webpack-plugin": "^2.0.1",
+        "webpack-cli": "^3.1.2"
+    }
 }
